# zmq_remote_viewer

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
python publisher/: zmq_publisher.py
